--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'G-F7TG1VM0HD');
   </script>
   <meta name="google-site-verification" content="UsFvbhANqyC8jCMK5xVGExuVAyHArTABsEh8o409214" />
-  <link href='https://ytdfree.online' rel='canonical'/>
+  <link href='https://ytdfree.github.io' rel='canonical'/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube Thumbnail Downloader Free Online</title>
