--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>YouTube Thumbnail Downloader Free Online</title>
   <link rel="icon" type="image/png" href="/icon.png">
   <meta content='Download high-quality YouTube thumbnails in HD, Full HD, and SD with our free Thumbnail Downloader tool. Fast, easy, and reliable!' name='description'/>
-  <meta name="keywords" content="YouTube Thumbnail Downloader, YTDFree.Online, free thumbnail downloader, YouTube, thumbnail generator, screenshots, image generator">
+  <meta name="keywords" content="YouTube Thumbnail Downloader, YTDFree.Github.Io, free thumbnail downloader, YouTube, thumbnail generator, screenshots, image generator">
   <meta name="robots" content="index, follow">
   <meta name="revisit-after" content="2 days">
   <meta name="language" content="English">
@@ -25,8 +25,8 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "name": "YTDFree.Online",
-    "url": "https://ytdfree.online",
+    "name": "YTDFree.Github.Io",
+    "url": "https://ytdfree.Github.Io",
     "description": "Download high-quality YouTube thumbnails in HD, Full HD, and SD with our free Thumbnail Downloader tool. Fast, easy, and reliable!"
   }
   </script>
@@ -578,8 +578,8 @@
   <header>
     <div class="header-container">
       <a href="/" class="logo">
-        <img src="/icon.png" alt="YTDFree.Online Logo">
-        <span>YTDFree.Online</span>
+        <img src="/icon.png" alt="YTDFree.Github.Io Logo">
+        <span>YTDFree.Github.Io</span>
       </a>
       <button id="mobile-menu-btn" class="mobile-menu-btn">☰</button>
       <nav id="mobile-menu">
@@ -610,10 +610,10 @@
     </div>
     <div class="loading" id="loading">Loading thumbnails...</div>
     <div class="social-buttons">
-      <a href="https://www.facebook.com/sharer/sharer.php?u=https://ytdfree.online" target="_blank" class="social-button" title="Share on Facebook">
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://ytdfree.Github.Io" target="_blank" class="social-button" title="Share on Facebook">
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="https://twitter.com/intent/tweet?url=https://ytdfree.online&text=Download YouTube thumbnails with YTDFree.Online!" target="_blank" class="social-button" title="Share on X">
+      <a href="https://twitter.com/intent/tweet?url=https://ytdfree.Github.Io&text=Download YouTube thumbnails with YTDFree.Github.Io!" target="_blank" class="social-button" title="Share on X">
         <i class="fab fa-x-twitter"></i>
       </a>
     </div>
@@ -622,9 +622,9 @@
     </div>
     <!-- Article Content -->
     <section class="pt-2 pb-12 text-left max-w-2xl mx-auto article-section">
-      <h2 class="text-xl font-bold mb-4 article-title">Download YouTube Thumbnails Easily with YTDFree.Online</h2>
+      <h2 class="text-xl font-bold mb-4 article-title">Download YouTube Thumbnails Easily with YTDFree.Github.Io</h2>
       <p class="mb-4">Looking to grab high-quality thumbnail images from YouTube videos? Our <strong>YouTube Thumbnail Downloader</strong> lets you download thumbnails in various resolutions, including Full HD (1080p), HD (720p), SD, and smaller sizes. Whether you're creating presentations, animations, or other creative projects, this tool supports YouTube formats like HD, HQ, 1080p, and 4K, making it a versatile solution for your needs.</p>
-      <h3 class="text-xl font-semibold mb-3">Why Use YTDFree.Online?</h3>
+      <h3 class="text-xl font-semibold mb-3">Why Use YTDFree.Github.Io?</h3>
       <p class="mb-4">Thumbnails are eye-catching visuals that summarize a video’s content. With our tool, you can:</p>
       <ul class="list-disc pl-6 mb-4">
         <li><strong>Access thumbnails instantly</strong>: Save time by downloading thumbnails for your projects.</li>
@@ -632,7 +632,7 @@
         <li><strong>Choose your resolution</strong>: Select from multiple sizes to fit your specific requirements.</li>
       </ul>
       <p class="mb-4">This tool is ideal for content creators, marketers, and designers who need quick access to YouTube video thumbnails without hassle.</p>
-      <h3 class="text-xl font-semibold mb-3">How to Use YTDFree.Online</h3>
+      <h3 class="text-xl font-semibold mb-3">How to Use YTDFree.Github.Io</h3>
       <p class="mb-4">Downloading a thumbnail is simple and user-friendly. Follow these steps:</p>
       <ol class="list-decimal pl-6 mb-4">
         <li><strong>Copy the YouTube URL</strong>: Go to the YouTube video with the thumbnail you want and copy its link.</li>
@@ -648,7 +648,7 @@
         <li><strong>Use responsibly</strong>: Avoid repurposing thumbnails in a way that violates copyright laws.</li>
       </ul>
       <h3 class="text-xl font-semibold mb-3">Device Compatibility</h3>
-      <p class="mb-4">YTDFree.Online works seamlessly across most devices, including:</p>
+      <p class="mb-4">YTDFree.Github.Io works seamlessly across most devices, including:</p>
       <ul class="list-disc pl-6 mb-4">
         <li><strong>Android devices</strong>: Fully compatible, allowing easy downloads and saving of thumbnails.</li>
         <li><strong>Desktops and laptops</strong>: Works on Windows, macOS, and Linux with any modern browser.</li>
@@ -670,15 +670,15 @@
       </ul>
       <p class="mb-4">By creating a unique version of the thumbnail, you can enhance its SEO value and avoid duplicate content issues.</p>
       <h3 class="text-xl font-semibold mb-3">Start Downloading Thumbnails Today!</h3>
-      <p class="mb-4">YTDFree.Online is a fast, free, and reliable tool for grabbing high-quality thumbnails. Whether you’re a content creator, designer, or marketer, this tool simplifies the process of accessing YouTube thumbnails for your projects. Just remember to use thumbnails responsibly and consider editing them for SEO and copyright purposes.</p>
+      <p class="mb-4">YTDFree.Github.Io is a fast, free, and reliable tool for grabbing high-quality thumbnails. Whether you’re a content creator, designer, or marketer, this tool simplifies the process of accessing YouTube thumbnails for your projects. Just remember to use thumbnails responsibly and consider editing them for SEO and copyright purposes.</p>
       <p>Try it now and elevate your creative projects with stunning YouTube thumbnails!</p>
     </section>
   </main>
   <footer>
     <div class="footer-container container">
       <a href="/" class="footer-logo">
-        <img src="/icon.png" alt="YTDFree.Online Logo">
-        <span>YTDFree.Online</span>
+        <img src="/icon.png" alt="YTDFree.Github.Io Logo">
+        <span>YTDFree.Github.Io</span>
       </a>
       <div class="footer-links">
         <a href="/" class="no-hover">Home</a>
@@ -690,15 +690,15 @@
       </div>
     </div>
     <div class="copyright">
-      <p>&copy; <script>document.write(new Date().getFullYear())</script> <a href="https://ytdfree.online">YTDFree.Online</a> All Rights Reserved</p>
+      <p>&copy; <script>document.write(new Date().getFullYear())</script> <a href="https://ytdfree.Github.Io">YTDFree.Github.Io</a> All Rights Reserved</p>
     </div>
   </footer>
   <!-- Modals for Navbar -->
   <div id="about-modal" class="modal">
     <div class="modal-content">
       <button class="modal-close" onclick="closeModal('about-modal')">✕</button>
-      <h2 class="text-2xl font-bold mb-4">About YTDFree.Online</h2>
-      <p class="mb-4">YTDFree.Online is a free, user-friendly tool designed to help you quickly download high-quality thumbnails from any YouTube video. Created with content creators, marketers, and designers in mind, our app supports multiple resolutions, including Full HD (1080p), HD (720p), and SD, making it perfect for presentations, video editing, or graphic design projects.</p>
+      <h2 class="text-2xl font-bold mb-4">About YTDFree.Github.Io</h2>
+      <p class="mb-4">YTDFree.Github.Io is a free, user-friendly tool designed to help you quickly download high-quality thumbnails from any YouTube video. Created with content creators, marketers, and designers in mind, our app supports multiple resolutions, including Full HD (1080p), HD (720p), and SD, making it perfect for presentations, video editing, or graphic design projects.</p>
       <p class="mb-4">We aim to provide a fast, reliable, and accessible solution for all your thumbnail needs, with compatibility across Android, desktops, and laptops. Our mission is to simplify your creative workflow while ensuring you use thumbnails responsibly by respecting copyright guidelines.</p>
       <p>Explore our tool today and elevate your projects with stunning visuals!</p>
     </div>
@@ -706,7 +706,7 @@
   <div id="features-modal" class="modal">
     <div class="modal-content">
       <button class="modal-close" onclick="closeModal('features-modal')">✕</button>
-      <h2 class="text-2xl font-bold mb-4">Features of YTDFree.Online</h2>
+      <h2 class="text-2xl font-bold mb-4">Features of YTDFree.Github.Io</h2>
       <p class="mb-4">Our tool is packed with features to make downloading YouTube thumbnails effortless:</p>
       <ul class="list-disc pl-6 mb-4">
         <li><strong>Multiple Resolutions</strong>: Download thumbnails in Full HD (1080p), HD (720p), SD, or smaller sizes to suit your needs.</li>
@@ -721,7 +721,7 @@
   <div id="how-to-use-modal" class="modal">
     <div class="modal-content">
       <button class="modal-close" onclick="closeModal('how-to-use-modal')">✕</button>
-      <h2 class="text-2xl font-bold mb-4">How to Use YTDFree.Online</h2>
+      <h2 class="text-2xl font-bold mb-4">How to Use YTDFree.Github.Io</h2>
       <p class="mb-4">Downloading YouTube thumbnails is quick and easy with our tool. Follow these steps:</p>
       <ol class="list-decimal pl-6 mb-4">
         <li><strong>Copy the YouTube URL</strong>: Go to the YouTube video with the thumbnail you want and copy its link.</li>
@@ -746,7 +746,7 @@
       <h3 class="text-lg font-semibold mb-2">What resolutions are available?</h3>
       <p class="mb-4">You can download thumbnails in Full HD (1280x720), HD (720p), SD, and smaller sizes, depending on the video’s availability.</p>
       <h3 class="text-lg font-semibold mb-2">Do I need to pay to use this tool?</h3>
-      <p>No, YTDFree.Online is completely free with no hidden fees!</p>
+      <p>No, YTDFree.Github.Io is completely free with no hidden fees!</p>
     </div>
   </div>
   <div class="bottom-buttons">
